Update F8Command.java